# wow-database-translator

./: .gitignore  Cargo.toml  readme.md
src/: common.rs  data.rs  main.rs  translate.rs
src/data/: azeroth_core.rs  mangos.rs
src/translate/: azeroth_core.rs  mangos.rs
